UI improvements: orange card borders, Asha as latest release, reduced spacing, solid underlines, removed band section, added docs

--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -98,7 +98,7 @@ const socialLinks = [
 					</button>
 					<div
 						id="links-dropdown-menu"
-						class="absolute right-0 mt-2 w-48 rounded-lg border border-[var(--border-color)] bg-[var(--bg-secondary)] shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200"
+						class="invisible absolute right-0 mt-2 w-48 rounded-lg border border-[var(--border-color)] bg-[var(--bg-secondary)] opacity-0 shadow-lg transition-all duration-200 group-hover:visible group-hover:opacity-100"
 						role="menu"
 						aria-labelledby="links-dropdown-btn"
 					>
